tools/hrw4u/tests/data/vars/vars_count.fail.error.txt
tests/data/vars/vars_count.fail.input.txt:7:3: error: No available slots for type 'int8' (max 4)
   7 |    Five: int8;
     |    ^
